--- a/tools/remark/plugins/remark-svg-equations/package.json
+++ b/tools/remark/plugins/remark-svg-equations/package.json
@@ -43,7 +43,8 @@
   "dependencies": {},
   "devDependencies": {},
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=4.0.0",
+    "npm": ">2.7.0"
   },
   "license": "Apache-2.0"
 }
