Print artifact URL

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -218,6 +218,9 @@ build_script:
   # If a newer build is queued for the same PR, cancel the current build:
   - ps: 'if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `throw "Canceling the current build as newer builds are queued for this pull request." }'
 
+  # Print the URL for downloading artifacts:
+  - cmd: echo 'https://ci.appveyor.com/api/projects/%APPVEYOR_ACCOUNT_NAME%/%APPVEYOR_PROJECT_NAME%/artifacts/var/log/logs.zip?all=true&job=%APPVEYOR_JOB_ID%&branch=%APPVEYOR_REPO_BRANCH%'
+
 
 test_script:
   # Node.js does not support Cygwin (used by MSYS2). Cygwin provides a terminal emulator which is not compatible with Node. For example, when Node.js scripts attempt to read from `stdin`, Node is unable to determine if running in a TTY due to Cygwin's use of pipes.
