--- a/appveyor.yml
+++ b/appveyor.yml
@@ -223,7 +223,10 @@ build_script:
 
   # Print the URL for downloading artifacts:
   - ps: |
-      Write-Host "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_NAME/artifacts/var/log/logs.zip?all=true&job=$([System.Web.HttpUtility]::UrlEncode($env:APPVEYOR_JOB_NAME))&branch=$([System.Web.HttpUtility]::UrlEncode($env:APPVEYOR_REPO_BRANCH))"
+      add-AppveyorMessage `
+        -Category Information `
+        -Message "URL for downloading artifacts is provided in the description." `
+        -Details ("https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_NAME/artifacts/var/log/logs.zip?all=true&job=$([System.Web.HttpUtility]::UrlEncode($env:APPVEYOR_JOB_NAME))&branch=$([System.Web.HttpUtility]::UrlEncode($env:APPVEYOR_REPO_BRANCH))")
 
 
 test_script:
