Add workaround to ignore nested directories
See related issue: npm/npm#15920

--- a/.npmignore
+++ b/.npmignore
@@ -8,13 +8,15 @@ TODO.md
 # Directories #
 ###############
 .github/
-build/
-docs/
-examples/
+**/build/
+**/docs/
+**/examples/
 reports/
 support/
-test/
-benchmark/
+**/test/
+**/benchmark/
+tmp/
+workshops/
 
 # Only top-level directories:
 /etc/
