Add recipe to run Python benchmarks

--- a/tools/make/lib/benchmark/Makefile
+++ b/tools/make/lib/benchmark/Makefile
@@ -3,6 +3,7 @@
 
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/javascript.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/julia.mk
+include $(TOOLS_MAKE_LIB_DIR)/benchmark/python.mk
 
 
 # TARGETS #
