Add recipe to run R benchmarks

--- a/tools/make/lib/benchmark/Makefile
+++ b/tools/make/lib/benchmark/Makefile
@@ -4,6 +4,7 @@
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/javascript.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/julia.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/python.mk
+include $(TOOLS_MAKE_LIB_DIR)/benchmark/r.mk
 
 
 # TARGETS #
