Add recipe to list R benchmarks

--- a/tools/make/lib/ls/Makefile
+++ b/tools/make/lib/ls/Makefile
@@ -67,6 +67,7 @@ include $(TOOLS_MAKE_LIB_DIR)/ls/tools_tests.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks_julia.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks_python.mk
+include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks_r.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/examples.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/markdown.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/pkgs.mk
