Add recipe to run C benchmarks

--- a/tools/make/lib/benchmark/Makefile
+++ b/tools/make/lib/benchmark/Makefile
@@ -2,6 +2,7 @@
 # DEPENDENCIES #
 
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/javascript.mk
+include $(TOOLS_MAKE_LIB_DIR)/benchmark/c.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/julia.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/python.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/r.mk
@@ -22,6 +23,6 @@ benchmark: benchmark-javascript
 #
 # This target runs cross-language benchmarks.
 
-benchmark-lang: benchmark-javascript benchmark-julia benchmark-python benchmark-r
+benchmark-lang: benchmark-javascript benchmark-julia benchmark-python benchmark-r benchmark-c
 
 .PHONY: benchmark-lang
