--- a/.gitattributes
+++ b/.gitattributes
@@ -8,8 +8,8 @@
 # Override what is considered "vendored" by GitHub's linguist:
 /deps/** linguist-vendored=false
 /lib/node_modules/** linguist-vendored=false
-/test/fixtures/** linguist-vendored=false
-/tools/** linguist-vendored=false
+test/fixtures/** linguist-vendored=false
+tools/** linguist-vendored=false
 
 # Override what is considered "documentation" by GitHub's linguist:
-/examples/** linguist-documentation=false
+examples/** linguist-documentation=false
