Set path attribute for project packages
In https://github.com/github/linguist/blob/5e2c79e9501d7cd2ecbea9afce64734dd4e4196f/lib/linguist/generated.rb#L58,
files under node_modules may be considered generated according to
GitHub's linguist. This commit attempts to override this setting.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 
 # Override what is considered "vendored" by GitHub's linguist:
 /deps/** linguist-vendored=false
-/lib/node_modules/** linguist-vendored=false
+/lib/node_modules/** linguist-vendored=false linguist-generated=false
 test/fixtures/** linguist-vendored=false
 tools/** linguist-vendored=false
 
