Add recipe to list Python test fixtures

--- a/tools/make/lib/ls/Makefile
+++ b/tools/make/lib/ls/Makefile
@@ -7,6 +7,7 @@ FILES_PATTERN ?= *.*
 # Define a generic filepath pattern:
 FILES_FILTER ?= .*/.*
 
+
 # Define a filename pattern for source files:
 SOURCES_PATTERN ?= *.js
 
@@ -28,17 +29,32 @@ R_SOURCES_PATTERN ?= *.R
 # Define a filepath pattern for source files:
 SOURCES_FILTER ?= .*/.*
 
+
 # Define a filename pattern for test files:
 TESTS_PATTERN ?= test*.js
 
 # Define a filepath pattern for test files:
 TESTS_FILTER ?= .*/.*
 
+
 # Define a filename pattern for test fixtures:
 TESTS_FIXTURES_PATTERN ?= *.*
 
+# Define a filename pattern for C test fixtures:
+C_TESTS_FIXTURES_PATTERN ?= *.c
+
+# Define a filename pattern for Julia test fixtures:
+JULIA_TESTS_FIXTURES_PATTERN ?= *.jl
+
+# Define a filename pattern for Python test fixtures:
+PYTHON_TESTS_FIXTURES_PATTERN ?= *.py
+
+# Define a filename pattern for R test fixtures:
+R_TESTS_FIXTURES_PATTERN ?= *.R
+
 # Define a filepath pattern for test fixture files:
 TESTS_FIXTURES_FILTER ?= .*/.*
+
 
 # Define a filename pattern for benchmark files:
 BENCHMARKS_PATTERN ?= benchmark*.js
@@ -58,17 +74,20 @@ R_BENCHMARKS_PATTERN ?= benchmark*.R
 # Define a filepath pattern for benchmark files:
 BENCHMARKS_FILTER ?= .*/.*
 
+
 # Define a filename pattern for example files:
 EXAMPLES_PATTERN ?= *.js
 
 # Define a filepath pattern for example files:
 EXAMPLES_FILTER ?= .*/.*
 
+
 # Define a filename pattern for Markdown files:
 MARKDOWN_PATTERN ?= *.md
 
 # Define a filepath pattern for Markdown files:
 MARKDOWN_FILTER ?= .*/.*
+
 
 # Define a filepath pattern for packages:
 PACKAGES_FILTER ?= .*/.*
@@ -84,6 +103,7 @@ include $(TOOLS_MAKE_LIB_DIR)/ls/sources_python.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests_directories.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests_fixtures.mk
+include $(TOOLS_MAKE_LIB_DIR)/ls/tests_fixtures_python.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tools_tests.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks_c.mk
