Add recipe to list R test fixtures

--- a/tools/make/lib/ls/Makefile
+++ b/tools/make/lib/ls/Makefile
@@ -105,6 +105,7 @@ include $(TOOLS_MAKE_LIB_DIR)/ls/tests_directories.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests_fixtures.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests_fixtures_julia.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests_fixtures_python.mk
+include $(TOOLS_MAKE_LIB_DIR)/ls/tests_fixtures_r.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tools_tests.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/benchmarks_c.mk
