Add recipe to list Julia source files

--- a/tools/make/lib/ls/Makefile
+++ b/tools/make/lib/ls/Makefile
@@ -111,6 +111,7 @@ include $(TOOLS_MAKE_LIB_DIR)/ls/files.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/sources.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/sources_c.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/sources_fortran.mk
+include $(TOOLS_MAKE_LIB_DIR)/ls/sources_julia.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/sources_python.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/tests_directories.mk
