--- a/tools/make/lib/lint/Makefile
+++ b/tools/make/lib/lint/Makefile
@@ -5,6 +5,7 @@ include $(TOOLS_MAKE_LIB_DIR)/lint/conf.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/filenames.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/javascript.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/markdown.mk
+include $(TOOLS_MAKE_LIB_DIR)/lint/python.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/package_json.mk
 
 
@@ -14,7 +15,7 @@ include $(TOOLS_MAKE_LIB_DIR)/lint/package_json.mk
 #
 # This target lints all files.
 
-lint: lint-filenames lint-javascript lint-markdown lint-conf lint-pkg-json
+lint: lint-filenames lint-javascript lint-markdown lint-python lint-conf lint-pkg-json
 
 .PHONY: lint
 
