--- a/tools/snippets/benchmark/r/DESCRIPTION
+++ b/tools/snippets/benchmark/r/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: TODO
-Title: TODO Benchmarks
+Title: Benchmarks
 Version: 0.0.0
 Authors@R: person("stdlib", "js", role = c("aut","cre"))
-Description: Benchmarks TODO.
+Description: Benchmarks.
 Depends: R (>=3.3.3)
 Imports:
 	microbenchmark
