--- a/tools/make/lib/benchmark/Makefile
+++ b/tools/make/lib/benchmark/Makefile
@@ -3,6 +3,7 @@
 
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/javascript.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/c.mk
+include $(TOOLS_MAKE_LIB_DIR)/benchmark/cpp.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/julia.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/python.mk
 include $(TOOLS_MAKE_LIB_DIR)/benchmark/r.mk
@@ -23,6 +24,6 @@ benchmark: benchmark-javascript
 #
 # This target runs cross-language benchmarks.
 
-benchmark-lang: benchmark-javascript benchmark-julia benchmark-python benchmark-r benchmark-c
+benchmark-lang: benchmark-javascript benchmark-julia benchmark-python benchmark-r benchmark-c benchmark-cpp
 
 .PHONY: benchmark-lang
