Create separate recipes for explicitly specifying a file list

--- a/tools/make/lib/test/Makefile
+++ b/tools/make/lib/test/Makefile
@@ -42,6 +42,15 @@ test: test-local
 .PHONY: test
 
 
+# Run unit tests.
+#
+# This target runs unit tests for a specified file set.
+
+test-files: test-files-local
+
+.PHONY: test-files
+
+
 # Run unit tests locally.
 #
 # This target runs unit tests in a local environment.
@@ -49,6 +58,15 @@ test: test-local
 test-local: test-javascript-local
 
 .PHONY: test-local
+
+
+# Run unit tests locally.
+#
+# This target runs unit tests for a specified file set in a local environment.
+
+test-files-local: test-javascript-files-local
+
+.PHONY: test-files-local
 
 
 # Generate a test summary.
@@ -60,6 +78,15 @@ test-summary: test-javascript-summary
 .PHONY: test-summary
 
 
+# Generate a test summary.
+#
+# This target runs unit tests for a specified file set and aggregates TAP output as a test summary.
+
+test-files-summary: test-javascript-files-summary
+
+.PHONY: test-files-summary
+
+
 # Generate TAP output.
 #
 # This target runs unit tests and streams raw TAP output.
@@ -69,6 +96,15 @@ test-tap: test-javascript-tap
 .PHONY: test-tap
 
 
+# Generate TAP output.
+#
+# This target runs unit tests for a specified file set and streams raw TAP output.
+
+test-files-tap: test-javascript-files-tap
+
+.PHONY: test-files-tap
+
+
 # Generate a xUnit XML.
 #
 # This target runs unit tests and converts TAP output to xUnit XML.
@@ -76,3 +112,12 @@ test-tap: test-javascript-tap
 test-xunit: test-javascript-xunit
 
 .PHONY: test-xunit
+
+
+# Generate a xUnit XML.
+#
+# This target runs unit tests for a specified file set and converts TAP output to xUnit XML.
+
+test-files-xunit: test-javascript-files-xunit
+
+.PHONY: test-files-xunit
