--- a/tools/gh-pages/stdlib-docs/package.json
+++ b/tools/gh-pages/stdlib-docs/package.json
@@ -12,6 +12,9 @@
       "url": "https://github.com/stdlib-js/stdlib/graphs/contributors"
     }
   ],
+  "bin": {
+    "stdlib-docs": "./bin/cli"
+  },
   "scripts": {},
   "main": "./lib",
   "repository": {
