Add `.xml` and `.ico` extensions

--- a/tools/lint/filenames/lib/extensions.json
+++ b/tools/lint/filenames/lib/extensions.json
@@ -16,6 +16,7 @@
 	".h",
 	".hpp",
 	".html",
+	".ico",
 	".jl",
 	".jpg",
 	".js",
@@ -31,5 +32,6 @@
 	".txt",
 	".wasm",
 	".woff",
-	".yml"
+	".yml",
+	".xml"
 ]
