--- a/tools/docs/api/build-package/package.json
+++ b/tools/docs/api/build-package/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stdlib/tools/docs/api/pkg-browser-build",
+  "name": "@stdlib/tools/docs/api/build-package",
   "version": "0.0.0",
   "description": "Build package assets.",
   "author": {
@@ -13,7 +13,7 @@
     }
   ],
   "bin": {
-    "pkg-browser-build": "./bin/cli"
+    "build-package": "./bin/cli"
   },
   "scripts": {},
   "main": "./lib",
