Add recipes to generate a browser REPL

--- a/tools/make/lib/repl/Makefile
+++ b/tools/make/lib/repl/Makefile
@@ -1,17 +1,8 @@
 
-# VARIABLES #
+# DEPENDENCIES #
 
-# Define the path of the executable:
-STDLIB ?= $(LOCAL_BIN_DIR)/cli
-
-# Define the command to launch the REPL:
-REPL ?= repl
-
-# Define any command-line options to use when invoking the executable:
-REPL_FLAGS ?=
-
-# Define the path of the directory in which to run the REPL:
-REPL_DIR ?= $(ROOT_DIR)
+include $(TOOLS_MAKE_LIB_DIR)/repl/browser.mk
+include $(TOOLS_MAKE_LIB_DIR)/repl/node.mk
 
 
 # TARGETS #
@@ -20,10 +11,6 @@ REPL_DIR ?= $(ROOT_DIR)
 #
 # This target starts a REPL environment.
 
-repl: $(NODE_MODULES) $(STDLIB)
-	$(QUIET) cd $(REPL_DIR); \
-	NODE_ENV=$(NODE_ENV_REPL) \
-	NODE_PATH=$(NODE_PATH_REPL) \
-	$(NODE) $(STDLIB) $(REPL) -- $(REPL_FLAGS)
+repl: repl-node
 
 .PHONY: repl
