Print an error message rather than hard fail
This commit changes installation behavior for Node.js native add-
ons. Instead of loudly failing (exiting with code 1), the commit
modifies the install recipe to print an error message, exit with
code 0, and attempt to install the next add-on. This change relies
on the assumption that failure to install an add-on is not fatal.
In other words, packages have a mechanism for coping with failed
add-on compilation; e.g., they have a pure JavaScript fallback.

--- a/tools/make/lib/addons/Makefile
+++ b/tools/make/lib/addons/Makefile
@@ -26,7 +26,7 @@ endif
 
 # Install add-ons.
 #
-# This target installs native add-ons.
+# This target installs native add-ons. If unable to install a native add-on, the target prints an error message and proceeds to try installing the next add-on.
 
 install-addons: clean-addons
 	$(QUIET) $(MAKE) -f $(this_file) list-pkgs-addons | while read -r pkg; do \
@@ -38,7 +38,7 @@ install-addons: clean-addons
 		cd $$pkg && \
 			GYP_DEFINES="$(NODE_GYP_DEFINES)" \
 			$(NODE_GYP) $(NODE_GYP_FLAGS) rebuild \
-		|| exit 1; \
+		|| echo "Error: failed to build add-on: $$pkg" && exit 0; \
 	done
 
 .PHONY: install-addons
